unpackaged/main/default/objects/SBQQ__CustomActionCondition__c/SBQQ__CustomActionCondition__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__CustomActionsHelp</customHelpPage>
    <description>Condition that determines if the Action should be rendered on the page.</description>
    <label>Custom Action Condition</label>
    <nameField>
        <label>Custom Action Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Action Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>